<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Biljetter</string>

	<string name="TicketView_header">Visa biljett</string>
	<string name="TicketView_received">Mottaget:</string>
	<string name="TicketView_validto">Giltig till:</string>
	<string name="TicketView_sender">Avsändare:</string>
	<string name="TicketView_notificationShow">Visa i statusfältet</string>
	<string name="TicketView_notificationHide">Göm från statusfältet</string>

	<string name="TicketList_header">Biljetter</string>
	<string name="TicketList_notickets">Inga biljetter hittade.</string>
	<string name="TicketList_findsms">Hitta biljetter</string>
	<string name="TicketList_order">Beställ en biljett</string>
	<string name="TicketList_ticketsloaded">Sökning efter biljetter klar!</string>
	<string name="TicketList_searchingfortickets">Söker efter biljetter...</string>

	<string name="TicketList_menu_findnewsms">Hitta nya biljetter</string>
	<string name="TicketList_menu_order">Beställ biljett</string>
	<string name="TicketList_menu_contact">Kontakta</string>
	<string name="TicketList_menu_settings">Inställningar</string>
	<string name="TicketList_menu_about">Om Biljetter</string>

	<string name="Wizard_header">Biljetter</string>
	<string name="Wizard_description">Den här appen kommer hjälpa ditt resande genom att hålla koll på dina inkommande sms-biljetter och göra det lätt att visa den för chaufförer och kontrollanter.\n\nI appen finns det även stöd för att beställa nya biljetter från flera olika reseföretag.\nAllt med bara några tryck!</string>
	<string name="Wizard_btnClose">Stäng</string>

	<string name="Contact_header">Kontakt</string>
	<string name="Contact_reason">Orsak</string>
	<string name="Contact_city">Stad</string>
	<string name="Contact_line">Linje</string>
	<string name="Contact_departure">Avgångstid</string>
	<string name="Contact_preview">Förhandsgranska</string>

	<string name="ContactPreview_header">Förhandsgranska</string>
	<string name="ContactPreview_send">Skicka</string>

	<string name="Settings_header">Inställningar</string>
	<string name="Settings_header_incoming">Inkommande SMS</string>
	<string name="Settings_shownotification">Visa ikon i statusfältet vid ny biljett.</string>
	<string name="Settings_silencesms">Markera sms innehållande biljetter som lästa.</string>
	<string name="Settings_header_ticketview">Biljettvisning</string>
	<string name="Settings_keepscreenon">Håll skärmen igång när en biljett visas.</string>
	<string name="Settings_header_scan">Biljettsökning</string>
	<string name="Settings_lastscan">Senaste biljett:</string>
	<string name="Settings_never">Aldrig</string>
	<string name="Settings_clearlastscan">Scanna om alla sms.</string>
	<string name="Settings_save">Spara</string>

	<string name="About_header">Om Biljetter</string>
	<string name="About_description">Det här är en app som hanterar dina sms-biljetter från både tåg- och bussbolag. Allt samlat på ett och samma ställe!\n\nAppen är släppt under GPL 3 och support och hela källkoden finns tillgängligt på GitHub.</string>
	<string name="About_btnGitHub">Biljetter på GitHub</string>
	<string name="About_btnFlattr">Flattra appen</string>
	<string name="About_btnWizard">Guide och ändringslogg</string>

	<string name="SmsReceiver_newticket">Ny biljett mottagen!</string>
	<string name="SmsReceiver_description">För resa %date%</string>

	<string name="Order_header">Beställ biljett</string>

	<string name="OrderOptions_header">Biljettalternativ</string>
	<string name="OrderOptions_area">Område</string>
	<string name="OrderOptions_type">Biljettyp</string>
	<string name="OrderOptions_send">Skicka beställning</string>
	<string name="OrderOptions_confirm">Bekräfta köp</string>
	<string name="OrderOptions_confirmMessage">Detta kommer skicka \"%message%\" till %number%.</string>
	<string name="OrderOptions_yes">Ja</string>
	<string name="OrderOptions_no">Nej</string>
	<string name="OrderOptions_sending">Skickar beställning!</string>
	<string name="OrderOptions_interrupted">Beställningen avbruten!</string>
</resources>
