<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:paddingLeft="4sp"
	android:paddingRight="4sp">
	
	<TextView android:id="@+id/header"
		android:text="@string/Wizard_header"
		android:textSize="25sp"
		android:textStyle="bold"
		android:textColor="@color/white"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:paddingBottom="9sp"
		android:layout_alignParentTop="true"
		android:drawableRight="@drawable/icon"
		android:drawablePadding="15sp" />
		
	<TextView android:id="@+id/txtDescription"
		android:text="@string/Wizard_description"
		android:textSize="20sp"
		android:textColor="@color/white"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_gravity="top|center_horizontal"
		android:paddingBottom="9sp" />
		
	<Button android:id="@+id/btnClose"
		android:text="@string/Wizard_btnClose"
		android:textSize="17sp"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent" />
</LinearLayout>
