<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<ScrollView
		android:layout_height="fill_parent"
		android:layout_width="fill_parent">
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<LinearLayout android:id="@+id/header"
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="3sp">
				<ImageView android:id="@+id/companylogo"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:scaleType="fitXY" />
				<TextView android:id="@+id/companyname"
					android:textSize="22sp"
					android:textStyle="bold"
					android:textColor="@color/white"
					android:layout_alignParentRight="true"
					android:layout_height="fill_parent"
					android:layout_width="wrap_content"
					android:gravity="center_vertical|left"
					android:paddingLeft="5sp" />
			</LinearLayout>
		
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="4sp"
				android:paddingRight="4sp">
				<TextView
					android:text="@string/Contact_reason"
					android:textSize="18sp"
					android:textStyle="bold"
					android:textColor="@color/white"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent" />

				<Spinner android:id="@+id/spnReason"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" />

				<TextView
					android:text="@string/Contact_city"
					android:textSize="18sp"
					android:textStyle="bold"
					android:textColor="@color/white"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent" />

				<EditText android:id="@+id/txtCity"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" />
					
				<TextView
					android:text="@string/Contact_line"
					android:textSize="18sp"
					android:textStyle="bold"
					android:textColor="@color/white"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent" />

				<EditText android:id="@+id/txtLine"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:inputType="number" />

				<TextView
					android:text="@string/Contact_departure"
					android:textSize="18sp"
					android:textStyle="bold"
					android:textColor="@color/white"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent" />

				<DatePicker android:id="@+id/datePicker"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:gravity="left" />
					
				<TimePicker android:id="@+id/timePicker"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:gravity="left" />

				<Button android:id="@+id/btnPreview"
					style="?button"
					android:text="@string/Contact_preview"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
